--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,8 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:ToDoFull_CHIZ2"
-             x:Class="ToDoFull_CHIZ2.App">
+             xmlns:local="clr-namespace:MauiApp9"
+             x:Class="MauiApp9.App">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
