--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <Shell
-    x:Class="ToDoFull_CHIZ2.AppShell"
+    x:Class="MauiApp9.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:ToDoFull_CHIZ2"
-    TabBarBackgroundColor="#E6B9A2"
-    TabBarUnselectedColor="Black"
-    TabBarForegroundColor="#8C1A11"
-    TabBarTitleColor="#8C1A11"
-    BackgroundColor="#E6B9A2">
+    xmlns:local="clr-namespace:MauiApp9"
+    Shell.FlyoutBehavior="Disabled"
+    Title="MauiApp9">
 
-    <TabBar>
-        <ShellContent Title="ToDo"
-                      ContentTemplate="{DataTemplate local:ToDoPage}"
-                      Icon="completed.svg"/>
-        <ShellContent Title="Completed"
-                      ContentTemplate="{DataTemplate local:CompletedPage}"
-                      Icon="todo.svg"/>
-        <ShellContent Title="Profile"
-                      ContentTemplate="{DataTemplate local:ProfilePage}"
-                      Icon="profile.svg"/>
-    </TabBar>
+    <ShellContent 
+        Route="SignInPage" 
+        ContentTemplate="{DataTemplate local:SignInPage}" />
+    
+    <ShellContent 
+        Route="SignUpPage" 
+        ContentTemplate="{DataTemplate local:SignUpPage}" />
+
+    <ShellContent Route="TodoPage" ContentTemplate="{DataTemplate local:TodoPage}" />
+    <ShellContent Route="AddTodoPage" ContentTemplate="{DataTemplate local:AddTodoPage}" />
+    <ShellContent Route="EditTodoPage" ContentTemplate="{DataTemplate local:EditTodoPage}" />
+    <ShellContent Route="CompletedTodoPage" ContentTemplate="{DataTemplate local:CompletedTodoPage}" />
+    <ShellContent Route="ProfilePage" ContentTemplate="{DataTemplate local:ProfilePage}" />
 
 </Shell>
