--- a/ProfilePage.xaml
+++ b/ProfilePage.xaml
@@ -4,10 +4,21 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp9.ProfilePage"
              BackgroundColor="#EEEBDD">
-    <Grid RowDefinitions="*, Auto">
+    <Grid RowDefinitions="Auto, *, Auto">
+        <Grid Grid.Row="0"
+              BackgroundColor="#D8AA96"  
+              Padding="10,30,0,10">      
+
+            <Label Text="Profile"
+                   FontSize="24"
+                   FontAttributes="Bold"
+                   TextColor="Black"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center" />
+        </Grid>
 
         <!-- Main Content -->
-        <VerticalStackLayout Grid.Row="0" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Spacing="30">
+        <VerticalStackLayout Grid.Row="1" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" Spacing="30">
 
             <!-- TODO LIST Image/Logo -->
             <Frame BackgroundColor="#EEEBDD" Padding="30" HasShadow="True" CornerRadius="12">
