--- a/SignInPage.xaml
+++ b/SignInPage.xaml
@@ -7,7 +7,7 @@
         <VerticalStackLayout BackgroundColor="#EEEBDD">
 
             <!-- Logo Container -->
-	            <Image Source="todo.svg" ScaleX="0.4" ScaleY="0.4"/>
+	            <Image Source="todo.svg" ScaleX="0.6" ScaleY="0.6"/>
 
                 
 				<VerticalStackLayout HorizontalOptions="Fill" BackgroundColor="#EEEBDD">
@@ -20,22 +20,33 @@
                            HorizontalTextAlignment="Center"
 						   Margin="0,10,0,30"/>
 
-                    <Entry x:Name="EmailEntry" Placeholder="Email address"
-                           Keyboard="Email" HeightRequest="50" 
-                           TextColor="Black"
-                           WidthRequest="350"/>
-
-                    <Entry x:Name="PasswordEntry" Placeholder="Password"
-                           IsPassword="True" HeightRequest="50" 
-                           TextColor="Black"
-                           WidthRequest="350"/>
-					
+                    <Border BackgroundColor="White"
+                            Margin="0,8"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+	                    <Entry x:Name="EmailEntry" Placeholder="Email address"
+	                           Keyboard="Email" HeightRequest="50" 
+	                           TextColor="Black"
+	                           WidthRequest="350"
+	                           PlaceholderColor="DarkGrey"/>
+					</Border>
+                    
+                    <Border BackgroundColor="White"
+                            Margin="0,8"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+	                    <Entry x:Name="PasswordEntry" Placeholder="Password"
+	                           IsPassword="True" HeightRequest="50" 
+	                           TextColor="Black"
+	                           WidthRequest="350"
+	                           PlaceholderColor="DarkGrey"/>
+					</Border>
                     <Button Text="Sign in"
 							FontSize="15"
                             BackgroundColor="#630000"
                             TextColor="White"
                             CornerRadius="8"
-                            HeightRequest="60"
+                            HeightRequest="30"
 							Margin="0,20,0,5"
 							WidthRequest="350"
                             Clicked="SignInButton_Clicked"/>
@@ -43,9 +54,9 @@
                     <Button Text="Sign Up"
 							FontSize="15"
                             BackgroundColor="#A8766F"
-                            TextColor="#555"
+                            TextColor="Black"
                             CornerRadius="8"
-                            HeightRequest="60"
+                            HeightRequest="30"
 							WidthRequest="350"
                             Clicked="SignUpButton_Clicked" />
                 </VerticalStackLayout>
