--- a/SignUpPage.xaml
+++ b/SignUpPage.xaml
@@ -7,8 +7,8 @@
         <VerticalStackLayout BackgroundColor="#EEEBDD">
 
             <!-- Logo Container -->
-            <Grid HorizontalOptions="Center" Margin="0,50,0,0">
-                <Image Source="todo.svg" ScaleX="0.4" ScaleY="0.4"/>
+            <Grid HorizontalOptions="Center" Margin="0,10,0,0">
+                <Image Source="todo.svg" ScaleX="0.6" ScaleY="0.6"/>
             </Grid>
 
             <!-- Message Container using Border (replacing Frame) -->
@@ -16,12 +16,70 @@
                 <VerticalStackLayout HorizontalOptions="Fill" BackgroundColor="#EEEBDD">
 
                     <!-- Input Fields -->
-                    <Entry x:Name="EmailEntry" WidthRequest="350" Placeholder="Email address" Keyboard="Email" HeightRequest="50" TextColor="Black" />
-                    <Entry x:Name="FirstNameEntry" WidthRequest="350" Placeholder="First Name" Keyboard="Text" HeightRequest="50" TextColor="Black" />
-                    <Entry x:Name="LastNameEntry" WidthRequest="350" Placeholder="Last Name" Keyboard="Text" HeightRequest="50" TextColor="Black" />
-                    <Entry x:Name="PasswordEntry" WidthRequest="350" Placeholder="Password" IsPassword="True" HeightRequest="50" TextColor="Black" />
-                    <Entry x:Name="ConfirmPasswordEntry" WidthRequest="350" Placeholder="Confirm Password" IsPassword="True" HeightRequest="50" TextColor="Black" />
-
+                    <Border BackgroundColor="White"
+                            Margin="0,3"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+                        <Entry x:Name="EmailEntry"
+                               PlaceholderColor="DarkGrey"
+                               WidthRequest="350"
+                               Placeholder="Email address"
+                               Keyboard="Email"
+                               HeightRequest="50"
+                               TextColor="Black"/>
+                    </Border>
+                    
+                    <Border BackgroundColor="White"
+                            Margin="0,3"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+                        <Entry x:Name="FirstNameEntry"
+                               PlaceholderColor="DarkGrey"
+                               WidthRequest="350"
+                               Placeholder="First Name"
+                               Keyboard="Text"
+                               HeightRequest="50"
+                               TextColor="Black"/>
+                    </Border>
+                    
+                    <Border BackgroundColor="White"
+                            Margin="0,3"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+                        <Entry x:Name="LastNameEntry"
+                               PlaceholderColor="DarkGrey"
+                               WidthRequest="350"
+                               Placeholder="Last Name"
+                               Keyboard="Text"
+                               HeightRequest="50"
+                               TextColor="Black"/>
+                    </Border>
+                    
+                    <Border BackgroundColor="White"
+                            Margin="0,3"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+                        <Entry x:Name="PasswordEntry"
+                               PlaceholderColor="DarkGrey"
+                               WidthRequest="350"
+                               Placeholder="Password"
+                               IsPassword="True"
+                               HeightRequest="50"
+                               TextColor="Black"/>
+                    </Border>
+                    
+                    <Border BackgroundColor="White"
+                            Margin="0,3"
+                            StrokeShape="RoundRectangle 12"
+                            MaximumWidthRequest="360">
+                        <Entry x:Name="ConfirmPasswordEntry"
+                               PlaceholderColor="DarkGrey"
+                               WidthRequest="350"
+                               Placeholder="Confirm Password"
+                               IsPassword="True"
+                               HeightRequest="50"
+                               TextColor="Black" />
+                    </Border>
 
 
                     <!-- Buttons -->
@@ -31,16 +89,16 @@
                             TextColor="White"
                             WidthRequest="350"
                             CornerRadius="8"
-                            HeightRequest="60" 
+                            HeightRequest="30" 
 						    Clicked="SignUpButton_Clicked"
 						    Margin="0,20,0,5"/>
 
                     <Button Text="Go Back"
 							FontSize="15"
                             BackgroundColor="#A8766F"
-                            TextColor="#555"
+                            TextColor="Black"
                             CornerRadius="8"
-                            HeightRequest="60"
+                            HeightRequest="30"
                             WidthRequest="350"
                             Clicked="GoBackButton_Clicked" />
                 </VerticalStackLayout>
